# Duplicity-UI

./: .gitignore  CMakeLists.txt  README.md  handle.cpp  handle.hpp  main.cpp  main.qml
